Inclusão de loader

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <input type="text" placeholder="Descreva um problema" id="campo-pesquisa">
         <button id="botao-pesquisa">Me Ajuda!</button>
       </section>
-      <div id="loader"></div>
-      <section id="resultados-pesquisa" class="resultados-pesquisa"></section>
+      <section id="resultados-pesquisa" class="resultados-pesquisa">
+        <div id="loader"></div>
+      </section>
     </main>
     <footer>
       <div>2024 - Fabrica de passo a passo IA. Todos os direitos reservados</div>
